# blog2

./: .gitignore  README.md
my-app2/: .gitignore  README.md  codegen.ts  package-lock.json  package.json
my-app2/src/app/: layout.tsx  page.tsx
my-app2/src/app/api/graphql/: route.ts
my-app2/src/app/posts/[id]/: page.tsx
my-app2/src/app/posts/new/: page.tsx
my-app2/src/components/: blog-post-form.tsx  error-message.tsx  loading.tsx  not-found.tsx  posts-list.tsx  success-message.tsx
my-app2/src/graphql/: queries.graphql  schema.graphql
my-app2/src/hooks/: use-blog-posts.ts
my-app2/src/lib/: graphql-client.ts  mock-data.ts  user-mapping.ts
my-app2/src/providers/: query-provider.tsx
server/: .gitignore  Cargo.toml  README.md
server/src/: main.rs
